--- a/chat-room-frontend/src/pages/Notification/index.css
+++ b/chat-room-frontend/src/pages/Notification/index.css
@@ -1,7 +1,3 @@
-#menu-container {
-  display: flex;
-  flex-direction: row;
-}
-#menu-container .menu-area {
-  width: 200px;
+#notification-container {
+  padding: 20px;
 }
